js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-arrow-assignment-expression-no-new-call-expression-prop-access.js







































$DONOTEVALUATE();

let f = () => new import('').prop;
